# gigaGPT

./: .gitignore  CLAUDE.md  LOCAL_CEREBRAS_PYTORCH.md  MB14Run0510.md  MB24Run0511.md  README.md  READMEmy.md  limaLinuxVM_withRosetta_config.yml  pyproject.toml  pyproject_cc.toml  pyproject_copilot.toml  requirements.txt  train.py
aiWork/: CSX_SDK_vs_appliance_server.md  CSX_appliance_server_explained.md  Switch_cerebras-pytorch_toLocalByClaudeCodeOpus4.6.md  how_to_start_pytorch_simfab.md  runOnCpu.md  train_to_grpc_execution_path.md
configs/: 111m_cpu.yaml  cpu_small.yaml  csx_sim_small.yaml  csx_sim_small_macos.yaml
myNotes/: 20260512-project-summaries.md  MB24Run0511.md  run-csx_sim_small.md  runLinux.md  tutorials.md
