[project]
name = "gigagpt"
version = "0.1.0"
requires-python = ">=3.8,<3.9"
dependencies = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "transformers==4.45.2",
    "tokenizers==0.20.1",
    "tiktoken==0.7.0",
    "tqdm==4.66.1",
    "cerebras_pytorch==2.5.0; sys_platform == 'linux'  and platform_machine == 'x86_64'",
    # "cerebras_pytorch==2.5.0; sys_platform == 'darwin' and platform_machine == 'arm64'", # Does not exist yet in PyPI, but will probably be added in the future.
    "datasets==2.19.1",
]

[tool.uv]
# Limit resolution to the platforms this project actually targets.
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'  and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
# For CPU/CSX runs. Remove both entries for GPU runs (torch/torchvision will be resolved from PyPI).
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
