[project]
name = "gigagpt"
version = "0.1.0"
requires-python = ">=3.8,<3.13"
dependencies = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "transformers==4.45.2",
    "tokenizers==0.20.1",
    "tiktoken==0.7.0",
    "tqdm==4.66.1",
    "cerebras_pytorch==2.5.0; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version < '3.9'",
    "cerebras-pytorch==2.10.0; sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.11'",
    "datasets==2.19.1",
]

[tool.uv]
# Limit resolution to the platforms this project actually targets.
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.11'",
    "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version < '3.9'",
]

[tool.uv.sources]
# For CPU/CSX runs. Remove both entries for GPU runs (torch/torchvision will be resolved from PyPI).
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
cerebras-pytorch = { path = "../cerebras-pytorch-src/cerebras_pytorch-2.10.0", editable = true, marker = "sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.11'" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
